--- a/styles/style.css
+++ b/styles/style.css
@@ -305,20 +305,19 @@ body,
   font-weight: bold;
 }
 
-#principal #feed #main .feedPlaylist .see-all:hover {
-  text-decoration: underline;
-}
-
 #principal #feed #main .feedPlaylist .playlists {
   display: flex;
   flex-wrap: wrap;
+  /* justify-content: space-between; */
   padding: 0;
-  justify-content: space-between;
+  min-height: 330px;
   overflow-y: hidden;
-  height: 380px;
+  /* height: 380px;
+  overflow-x: auto; */
 }
 
 #principal #feed #main .feedPlaylist .playlists li {
+  
   width: 15%;
   list-style-type: none;
   background-color: rgba(255, 255, 255, 0.1);
@@ -327,8 +326,13 @@ body,
   cursor: pointer;
   transition: background-color 0.3s;
   position: relative;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  height: max-content;
+  margin-right: 1%;
+  
 }
+
+
 
 #principal #feed #main .feedPlaylist .playlists li img {
   width: 100%;
@@ -584,7 +588,8 @@ body,
 }
 
 #audioBar #musicaPlay {
-  width: 20%;
+  width: auto;
+  margin-left: 1.25%;
 }
 
 #audioBar button.icones {
@@ -633,7 +638,7 @@ body,
   width: 35px;
   height: 35px;
   border-radius: 24px;
-  background-color: #fff;
+  /* background-color: #fff; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -773,3 +778,37 @@ body,
   display: flex;
   flex-direction: column;
 }
+
+
+#musicaPlay {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#musicaPlay .song-image {
+  width: 60px;
+  height: 60px;
+  border-radius: 5%;
+}
+
+#musicaPlay .song-details {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  padding: 10px;
+  text-wrap: nowrap;
+}
+
+#musicaPlay .song-name {
+  color: white;
+  font-size: 24px;
+  margin-bottom: 0px;
+}
+
+#musicaPlay .author {
+  color: white;
+  font-size: 14px;
+  margin-bottom: -5px;
+}
+
