--- a/styles/style.css
+++ b/styles/style.css
@@ -802,13 +802,16 @@ body,
 
 #musicaPlay .song-name {
   color: white;
-  font-size: 24px;
+  font-size: 1em;
   margin-bottom: 0px;
+  width: 100px;
 }
 
 #musicaPlay .author {
   color: white;
-  font-size: 14px;
+  font-size: 10px;
   margin-bottom: -5px;
+  width: 100px;
+  overflow: hidden;
 }
 
