--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,7 @@ body,
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 0;
+  height: fit-content;
 }
 
 #principal #feed #main #feedHeader #playlistsRecentes li {
@@ -285,6 +286,7 @@ body,
 
 #principal #feed #main .feedPlaylist {
   max-width: 1920px;
+  /* height: 390px; */
 }
 
 #principal #feed #main .feedPlaylist h4 {
@@ -304,6 +306,7 @@ body,
   float: right;
   font-size: 9pt;
   font-weight: bold;
+  cursor: pointer;
 }
 
 #principal #feed #main .feedPlaylist .playlists {
@@ -311,10 +314,14 @@ body,
   flex-wrap: wrap;
   /* justify-content: space-between; */
   padding: 0;
+  /* min-height: 660px; */
   min-height: 330px;
+  /* min-height: 990px; */
+  
   overflow-y: hidden;
-  /* height: 380px;
-  overflow-x: auto; */
+  /* height: 380px; */
+  /* overflow-x: auto; */
+
 }
 
 #principal #feed #main .feedPlaylist .playlists li {
@@ -327,10 +334,12 @@ body,
   cursor: pointer;
   transition: background-color 0.3s;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   height: max-content;
-  margin-right: 1.8%;
-  
+  margin-right: 1.6%;
+  height: 98%;
+  /* height: 46%; */
+  /* height: 31%; */
 }
 
 
@@ -765,7 +774,7 @@ body,
   width:254px;
   align-self: flex-end;
   position: absolute;
-  top:30px
+  top:30px;
 }
 
 .show {
