--- a/styles/style.css
+++ b/styles/style.css
@@ -516,7 +516,7 @@ body,
     display: flex !important;
     align-items: center;
     padding: 0 5vw;
-    justify-content: end;
+    justify-content: space-between;
   }
 
   #mobibtn {
